--- a/index.html
+++ b/index.html
@@ -10,19 +10,47 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
+
+    <!---------------------------------NAV BAR SECTION---------------------------------->
+
     <section id="nav-bar">
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img src="logo.jpg" width="20" height="20"></a>
+                <!-- <a class="navbar-brand" href="#"><img src="logo.png"></a> -->
+                <div>
+                    <svg class="logo-icon" preserveAspectRatio="xMidYMid meet" data-bbox="20.125 22.052 159.75 155.894"
+                        viewBox="20.125 22.052 159.75 155.894" height="200" width="200"
+                        xmlns="http://www.w3.org/2000/svg" data-type="color" role="img"
+                        aria-labelledby="svgcid--kebcbdhxfogn">
+                        <defs>
+                            <style>
+                                #comp-k0wfjrh1 svg [data-color="1"] {
+                                    fill: #000000;
+                                }
+                            </style>
+                        </defs>
+                        <title id="svgcid--kebcbdhxfogn">Logo</title>
+                        <g>
+                            <path d="M179.875 73.993c0 1.402-.049 2.8-.149 4.189a57.46 57.46 0 0 1-4.066 17.505c-2.898 7.156-7.153 13.574-12.647 19.077l-34.674 34.867-28.271 28.315-9.224-9.24 28.261-28.305 34.683-34.877c8.41-8.423 13.042-19.62 13.041-31.532 0-11.91-4.631-23.109-13.04-31.532-4.727-4.734-11.011-7.341-17.697-7.341-6.684 0-12.969 2.607-17.695 7.341-5.058 5.067-5.058 13.311 0 18.378a5.496
+                         5.496 0 0 0 3.91 1.621 5.49 5.49 0 0 0 3.909-1.621l4.746-4.753 9.224 9.239-4.746 4.753c-2.85 2.854-6.464 4.668-10.38 5.247-.903.133-1.823.201-2.753.202a18.433 18.433 0 0 1-13.133-5.449c-4.915-4.922-7.622-11.467-7.622-18.428s2.707-13.506 7.622-18.428a37.836 37.836 0 0 1 12.597-8.376 37.886 37.886 0 0 1 14.323-2.793c4.941.001 9.759.94 14.322 2.793a37.866 37.866 0 0 1 12.597 8.376
+                          58.343 58.343 0 0 1 5.221 5.991 57.107 57.107 0 0 1 7.423 13.086 57.396 57.396 0 0 1 4.15 18.895c.046.931.068 1.864.068 2.8zm-80.13 38.408l-23.334 23.372-14.433-14.456L85.635 97.62 81.023 93a39.801 39.801 0 0 0-26.538-11.677 39.902 39.902 0 0 0-19.787 4.274c-4.059-15.188.169-31.771 11.515-43.136 9.758-9.773 25.633-9.772 35.39 0l9.224-9.239a37.856 37.856 0 0 0-12.597-8.376
+                           37.883 37.883 0 0 0-14.323-2.793c-4.941 0-9.761.94-14.323 2.793a37.836 37.836 0 0 0-12.597 8.376c-8.51 8.524-14.064 19.293-16.058 31.143a57.997 57.997 0 0 0-.303 17.235 57.596 57.596 0 0 0 4.848 16.697l3.573 7.7 6.515-5.431c8.86-7.384 21.461-8.07 31.047-2.367l-23.08 23.118 32.881 32.935 32.559-32.611-9.224-9.24zm52.444-22.216c2.697-2.665 2.764-7.205.072-9.902-2.692-2.696-7.162-2.763-9.886-.071-2.697
+                            2.665-2.764 7.205-.071 9.902 2.692 2.696 7.162 2.762 9.885.071z" fill="#020202"
+                                data-color="1"></path>
+                        </g>
+                    </svg>
+                    <span class="logo-label">LAST CHANCE</span>
+                </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <i class="fa fa-bars"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ml-auto">
+                    <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">HOME</a>
                         </li>
@@ -43,6 +71,28 @@
             </div>
         </nav>
     </section>
-</body>
 
+    <!---------------------------------BANNER SECTION---------------------------------->
+
+    <section id="banner">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <p class="promo-title">PROTECT OUR <span class="wildlife">WILDLIFE</span></p>
+                    <p>MY FIRST WEBSITE HERE - try not to contact if you want more websites like this.</p>
+                    <button onclick="seeVideo()"><span id="seeVid"><img src="play.png" class="play-btn">Watch Video</span></button>
+                </div>
+                <div class="col-md-6 text-center">
+                    <img src="home2.png" class="img-fluid">
+                </div>
+            </div>
+        </div>
+        <img src="wave1.png" class="bottom-img">
+    </section>
+</body>
+<script>
+    function seeVideo(){
+        document.getElementById("seeVid").innerHTML = "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/72KI4leSP4E\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>";
+    }
+</script>
 </html>
