--- a/index.html
+++ b/index.html
@@ -22,25 +22,14 @@
             <div class="container-fluid">
                 <!-- <a class="navbar-brand" href="#"><img src="logo.png"></a> -->
                 <div>
-                    <svg class="logo-icon" preserveAspectRatio="xMidYMid meet" data-bbox="20.125 22.052 159.75 155.894"
-                        viewBox="20.125 22.052 159.75 155.894" height="200" width="200"
-                        xmlns="http://www.w3.org/2000/svg" data-type="color" role="img"
-                        aria-labelledby="svgcid--kebcbdhxfogn">
-                        <defs>
-                            <style>
-                                #comp-k0wfjrh1 svg [data-color="1"] {
-                                    fill: #000000;
-                                }
-                            </style>
-                        </defs>
-                        <title id="svgcid--kebcbdhxfogn">Logo</title>
+                    <svg class="logo-icon" viewBox="20.125 22.052 159.75 155.894" height="200" width="200">
                         <g>
                             <path d="M179.875 73.993c0 1.402-.049 2.8-.149 4.189a57.46 57.46 0 0 1-4.066 17.505c-2.898 7.156-7.153 13.574-12.647 19.077l-34.674 34.867-28.271 28.315-9.224-9.24 28.261-28.305 34.683-34.877c8.41-8.423 13.042-19.62 13.041-31.532 0-11.91-4.631-23.109-13.04-31.532-4.727-4.734-11.011-7.341-17.697-7.341-6.684 0-12.969 2.607-17.695 7.341-5.058 5.067-5.058 13.311 0 18.378a5.496
-                         5.496 0 0 0 3.91 1.621 5.49 5.49 0 0 0 3.909-1.621l4.746-4.753 9.224 9.239-4.746 4.753c-2.85 2.854-6.464 4.668-10.38 5.247-.903.133-1.823.201-2.753.202a18.433 18.433 0 0 1-13.133-5.449c-4.915-4.922-7.622-11.467-7.622-18.428s2.707-13.506 7.622-18.428a37.836 37.836 0 0 1 12.597-8.376 37.886 37.886 0 0 1 14.323-2.793c4.941.001 9.759.94 14.322 2.793a37.866 37.866 0 0 1 12.597 8.376
-                          58.343 58.343 0 0 1 5.221 5.991 57.107 57.107 0 0 1 7.423 13.086 57.396 57.396 0 0 1 4.15 18.895c.046.931.068 1.864.068 2.8zm-80.13 38.408l-23.334 23.372-14.433-14.456L85.635 97.62 81.023 93a39.801 39.801 0 0 0-26.538-11.677 39.902 39.902 0 0 0-19.787 4.274c-4.059-15.188.169-31.771 11.515-43.136 9.758-9.773 25.633-9.772 35.39 0l9.224-9.239a37.856 37.856 0 0 0-12.597-8.376
-                           37.883 37.883 0 0 0-14.323-2.793c-4.941 0-9.761.94-14.323 2.793a37.836 37.836 0 0 0-12.597 8.376c-8.51 8.524-14.064 19.293-16.058 31.143a57.997 57.997 0 0 0-.303 17.235 57.596 57.596 0 0 0 4.848 16.697l3.573 7.7 6.515-5.431c8.86-7.384 21.461-8.07 31.047-2.367l-23.08 23.118 32.881 32.935 32.559-32.611-9.224-9.24zm52.444-22.216c2.697-2.665 2.764-7.205.072-9.902-2.692-2.696-7.162-2.763-9.886-.071-2.697
-                            2.665-2.764 7.205-.071 9.902 2.692 2.696 7.162 2.762 9.885.071z" fill="#020202"
-                                data-color="1"></path>
+                     5.496 0 0 0 3.91 1.621 5.49 5.49 0 0 0 3.909-1.621l4.746-4.753 9.224 9.239-4.746 4.753c-2.85 2.854-6.464 4.668-10.38 5.247-.903.133-1.823.201-2.753.202a18.433 18.433 0 0 1-13.133-5.449c-4.915-4.922-7.622-11.467-7.622-18.428s2.707-13.506 7.622-18.428a37.836 37.836 0 0 1 12.597-8.376 37.886 37.886 0 0 1 14.323-2.793c4.941.001 9.759.94 14.322 2.793a37.866 37.866 0 0 1 12.597 8.376
+                      58.343 58.343 0 0 1 5.221 5.991 57.107 57.107 0 0 1 7.423 13.086 57.396 57.396 0 0 1 4.15 18.895c.046.931.068 1.864.068 2.8zm-80.13 38.408l-23.334 23.372-14.433-14.456L85.635 97.62 81.023 93a39.801 39.801 0 0 0-26.538-11.677 39.902 39.902 0 0 0-19.787 4.274c-4.059-15.188.169-31.771 11.515-43.136 9.758-9.773 25.633-9.772 35.39 0l9.224-9.239a37.856 37.856 0 0 0-12.597-8.376
+                       37.883 37.883 0 0 0-14.323-2.793c-4.941 0-9.761.94-14.323 2.793a37.836 37.836 0 0 0-12.597 8.376c-8.51 8.524-14.064 19.293-16.058 31.143a57.997 57.997 0 0 0-.303 17.235 57.596 57.596 0 0 0 4.848 16.697l3.573 7.7 6.515-5.431c8.86-7.384 21.461-8.07 31.047-2.367l-23.08 23.118 32.881 32.935 32.559-32.611-9.224-9.24zm52.444-22.216c2.697-2.665 2.764-7.205.072-9.902-2.692-2.696-7.162-2.763-9.886-.071-2.697
+                        2.665-2.764 7.205-.071 9.902 2.692 2.696 7.162 2.762 9.885.071z" fill="#fff" data-color="1">
+                            </path>
                         </g>
                     </svg>
                     <span class="logo-label">LAST CHANCE</span>
@@ -52,19 +41,19 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">HOME</a>
+                            <a class="nav-link" href="#">HOME</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">SERVICES</a>
+                            <a class="nav-link" href="#blogs">BLOGS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">ABOUT US</a>
+                            <a class="nav-link" href="#AboutUs">ABOUT US</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">TESTIMONIALS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">CONTACT</a>
+                            <a class="nav-link" href="#Contact">CONTACT</a>
                         </li>
                     </ul>
                 </div>
@@ -80,19 +69,104 @@
                 <div class="col-md-6">
                     <p class="promo-title">PROTECT OUR <span class="wildlife">WILDLIFE</span></p>
                     <p>MY FIRST WEBSITE HERE - try not to contact if you want more websites like this.</p>
-                    <button onclick="seeVideo()"><span id="seeVid"><img src="play.png" class="play-btn">Watch Video</span></button>
+                    <button onclick="seeVideo()"><span id="seeVid"><img src="play.png" class="play-btn">Watch
+                            Video</span></button>
                 </div>
                 <div class="col-md-6 text-center">
-                    <img src="home2.png" class="img-fluid">
+                    <img src="home2.png" class="img-fluid" style="margin-top: 30px;">
                 </div>
             </div>
         </div>
         <img src="wave1.png" class="bottom-img">
     </section>
+    <br><br>
+    <div class="container">
+        <a href="#" style="text-decoration: none; color: #fff;">
+            <button class="getInvolve">
+                <strong>GET INVOLVED</strong>
+            </button>
+        </a>
+    </div>
+    <br><br><br><br><br><br>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-3"><strong class="num">40K</strong><br><strong class="num-label">Endangered Species</strong></div>
+            <div class="col-lg-3"><strong class="num">800</strong><br><strong class="num-label">Volunteers</strong></div>
+            <div class="col-lg-3"><strong class="num">140</strong><br><strong class="num-label">Conservation Programs</strong></div>
+            <div class="col-lg-3"><strong class="num">1</strong><br><strong class="num-label">Earth for Us to Protect</strong></div>
+        </div>
+    </div>
+    <br><br><br>
+
+    <!-------------------------- blogs section ------------------------>
+
+    <section id="blogs">
+        <div class="container">
+            <div class="row">
+                <h1><strong>Latest News.</strong></h1>
+            </div>
+            <br>
+            <div class="row">
+                <div class="col-md-4 blogs">
+                    <a href="https://www.indiatoday.in/india/story/odisha-bans-fishing-olive-ridley-turtles-nesting-sites-1869804-2021-10-27"
+                        target="_blank">
+                        <div class="in-col">
+                            <img src="blog1.jpg" class="blogs-img">
+                            <div style="padding: 15px;">
+                                <h4>Odisha govt bans fishing around olive ridley turtles' nesting sites for 7 months
+                                </h4>
+                                <p>The Odisha government will ban fishing for seven months from November
+                                    around the sites where the endangered olive ridley turtles congregate for mass
+                                    nesting.
+                                </p>
+                                <p style="color: grey;">Updated : October 27, 2021, 5:40 am</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-4 blogs">
+                    <a href="https://www.indiatoday.in/science/story/ivory-billed-woodpecker-22-other-birds-fish-species-extinct-us-govt-1858766-2021-09-29"
+                        target="_blank">
+                        <div class="in-col">
+                            <img src="blog2.jpg" class="blogs-img">
+                            <div style="padding: 15px;">
+                                <h4>Ivory-billed woodpecker, 22 other birds, fish species extinct: US govt</h4>
+                                <p>The ivory-billed woodpecker was perhaps the best known species the US Fish and
+                                    Wildlife Service on Wednesday will announce is extinct.</p>
+                                <p style="color: grey; vertical-align: bottom;">Updated : September 29, 2021, 5:36 pm
+                                </p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-4 blogs">
+                    <a href="https://www.indiatoday.in/magazine/special-report/story/20210816-the-great-wild-hope-mitigation-measures-to-protect-the-wildlife-1837362-2021-08-06"
+                        target="_blank">
+                        <div class="in-col">
+                            <img src="blog3.jpg" class="blogs-img">
+                            <div style="padding: 15px;">
+                                <h4>The great wild hope: Mitigation measures to protect the wildlife</h4>
+                                <p>India wakes up to the need for mitigation measures such as underground transmission
+                                    lines
+                                    and animal
+                                    overpasses to curb wildlife mortality, even if it means driving up solar energy and
+                                    highway costs</p>
+                                <p style="color: grey; vertical-align: bottom;">Updated : August 13, 2021, 7:49 am
+
+                                </p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
 <script>
-    function seeVideo(){
+    function seeVideo() {
         document.getElementById("seeVid").innerHTML = "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/72KI4leSP4E\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>";
     }
 </script>
+
 </html>
