--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                             <a class="nav-link" href="#blogs">BLOGS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#AboutUs">ABOUT US</a>
+                            <a class="nav-link" href="#about-us">ABOUT US</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">TESTIMONIALS</a>
+                            <a class="nav-link" href="#testimonials">TESTIMONIALS</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#Contact">CONTACT</a>
@@ -73,6 +73,7 @@
                             Video</span></button>
                 </div>
                 <div class="col-md-6 text-center">
+                    <br><br><br><br><br><br>
                     <img src="home2.png" class="img-fluid" style="margin-top: 30px;">
                 </div>
             </div>
@@ -90,10 +91,14 @@
     <br><br><br><br><br><br>
     <div class="container">
         <div class="row">
-            <div class="col-lg-3"><strong class="num">40K</strong><br><strong class="num-label">Endangered Species</strong></div>
-            <div class="col-lg-3"><strong class="num">800</strong><br><strong class="num-label">Volunteers</strong></div>
-            <div class="col-lg-3"><strong class="num">140</strong><br><strong class="num-label">Conservation Programs</strong></div>
-            <div class="col-lg-3"><strong class="num">1</strong><br><strong class="num-label">Earth for Us to Protect</strong></div>
+            <div class="col-lg-3"><strong class="num">40K</strong><br><strong class="num-label">Endangered
+                    Species</strong></div>
+            <div class="col-lg-3"><strong class="num">800</strong><br><strong class="num-label">Volunteers</strong>
+            </div>
+            <div class="col-lg-3"><strong class="num">140</strong><br><strong class="num-label">Conservation
+                    Programs</strong></div>
+            <div class="col-lg-3"><strong class="num">1</strong><br><strong class="num-label">Earth for Us to
+                    Protect</strong></div>
         </div>
     </div>
     <br><br><br>
@@ -102,10 +107,8 @@
 
     <section id="blogs">
         <div class="container">
-            <div class="row">
-                <h1><strong>Latest News.</strong></h1>
-            </div>
-            <br>
+            <h1 class="title text-center"><strong>Latest News.</strong></h1>
+            <br><br>
             <div class="row">
                 <div class="col-md-4 blogs">
                     <a href="https://www.indiatoday.in/india/story/odisha-bans-fishing-olive-ridley-turtles-nesting-sites-1869804-2021-10-27"
@@ -159,6 +162,129 @@
                     </a>
                 </div>
             </div>
+            <div class="text-center" style="margin-top: 20px;"><button type="button"
+                    class="btn btn-primary text-center">View More</button></div>
+        </div>
+    </section>
+
+
+    <!--------------------- About us section --------------------------->
+
+    <section id="about-us">
+        <div class="container">
+            <h1 class="title text-center">Know about Us.</h1>
+            <div class="row">
+                <div class="col-md-6 about-us">
+                    <p class="about-title">About Last Chance</p>
+                    <p>Last Chance Animal Rescue operates in Washington D.C., Maryland and Virginia.
+                        We take in cats and dogs from more than 50 high-kill shelters in 12 states and provide
+                        disaster-relief services for pets. We partner with more than 30 PetSmart and Petco stores in
+                        the region and provide full service in-store cat adoptions.</p>
+                    <p class="about-title">Why we are different</p>
+                    <p>Last Chance annually rescues and rehomes some 10,000 pets and since 1999, we’ve provided loving
+                        homes for more than 100,000 cats and dogs.</p>
+                    <p>Last Chance will get a donation every time you shop online! We just received a check and it is
+                        enough to buy a month’s supply of kitten milk for a litter of five kittens. Every little bit
+                        helps!</p>
+                    <p>If you shop on Amazon, bookmark this link: <a href="http://smile.amazon.com/ch/52-2328626"
+                            style="text-decoration: none;">http://smile.amazon.com/ch/52-2328626</a>, and 0.5% of the
+                        price of your eligible AmazonSmile purchases will be donated to Last Chance Animal Rescue Inc.
+                        whenever you shop on AmazonSmile.</p>
+                </div>
+                <div class="col-md-6">
+                    <br><br><br><br><br><br><br><br><br>
+                    <img src="footprint.png" width="470px" style="object-fit: cover;">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!------------------------- Testimonials section ------------------------------>
+
+    <section id="testimonials">
+        <div class="container">
+            <h1 class="title text-center">What Helper say</h1>
+            <div class="row offset-1">
+                <div class="col-md-5 testimonials">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit voluptate modi nam doloribus cum.
+                        Aliquid pariatur nisi reiciendis facere veniam architecto ad sint perspiciatis vitae ipsa, odit
+                        repudiandae, ut provident.</p>
+                    <img src="user1.jpg">
+                    <p class="user-details"><b>Name one</b><br> Co-founder at xyz</p>
+                </div>
+                <div class="col-md-5 testimonials">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit voluptate modi nam doloribus cum.
+                        Aliquid pariatur nisi reiciendis facere veniam architecto ad sint perspiciatis vitae ipsa, odit
+                        repudiandae, ut provident.</p>
+                    <img src="user2.jpg">
+                    <p class="user-details"><b>Name two</b><br> Director at xyz</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="movement">
+        <div class="container movement text-center">
+            <h1 class="movement-title">JOIN THE MOVEMENT!</h1>
+            <p class="movement-sub-title">Get the Latest News & Updates</p>
+        </div>
+    </section>
+
+    <!---------------------------------- Social media section ------------------------------------>
+
+    <section id="social-media">
+        <div class="container text-center">
+            <p>FIND US ON SOCIAL MEDIA</p>
+            <div class="social-icons">
+                <a href="#"><img src="facebook-icon.png"> </a>
+                <a href="#"><img src="instagram-icon.png"> </a>
+                <a href="#"><img src="twitter-icon.png"> </a>
+                <a href="#"><img src="whatsapp-icon.png"> </a>
+                <a href="#"><img src="linkedin-icon.png"> </a>
+                <a href="#"><img src="snapchat-icon.png"> </a>
+            </div>
+        </div>
+    </section>
+
+    <!---------------------------------- footer section ------------------------------------>
+
+    <div id="Contact"></div>
+    <section id="footer">
+        <img src="wave2.png" class="footer-img">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 footer-box">
+                    <svg class="logo-icon" viewBox="20.125 22.052 159.75 155.894" height="200" width="200">
+                        <g>
+                            <path d="M179.875 73.993c0 1.402-.049 2.8-.149 4.189a57.46 57.46 0 0 1-4.066 17.505c-2.898 7.156-7.153 13.574-12.647 19.077l-34.674 34.867-28.271 28.315-9.224-9.24 28.261-28.305 34.683-34.877c8.41-8.423 13.042-19.62 13.041-31.532 0-11.91-4.631-23.109-13.04-31.532-4.727-4.734-11.011-7.341-17.697-7.341-6.684 0-12.969 2.607-17.695 7.341-5.058 5.067-5.058 13.311 0 18.378a5.496
+                     5.496 0 0 0 3.91 1.621 5.49 5.49 0 0 0 3.909-1.621l4.746-4.753 9.224 9.239-4.746 4.753c-2.85 2.854-6.464 4.668-10.38 5.247-.903.133-1.823.201-2.753.202a18.433 18.433 0 0 1-13.133-5.449c-4.915-4.922-7.622-11.467-7.622-18.428s2.707-13.506 7.622-18.428a37.836 37.836 0 0 1 12.597-8.376 37.886 37.886 0 0 1 14.323-2.793c4.941.001 9.759.94 14.322 2.793a37.866 37.866 0 0 1 12.597 8.376
+                      58.343 58.343 0 0 1 5.221 5.991 57.107 57.107 0 0 1 7.423 13.086 57.396 57.396 0 0 1 4.15 18.895c.046.931.068 1.864.068 2.8zm-80.13 38.408l-23.334 23.372-14.433-14.456L85.635 97.62 81.023 93a39.801 39.801 0 0 0-26.538-11.677 39.902 39.902 0 0 0-19.787 4.274c-4.059-15.188.169-31.771 11.515-43.136 9.758-9.773 25.633-9.772 35.39 0l9.224-9.239a37.856 37.856 0 0 0-12.597-8.376
+                       37.883 37.883 0 0 0-14.323-2.793c-4.941 0-9.761.94-14.323 2.793a37.836 37.836 0 0 0-12.597 8.376c-8.51 8.524-14.064 19.293-16.058 31.143a57.997 57.997 0 0 0-.303 17.235 57.596 57.596 0 0 0 4.848 16.697l3.573 7.7 6.515-5.431c8.86-7.384 21.461-8.07 31.047-2.367l-23.08 23.118 32.881 32.935 32.559-32.611-9.224-9.24zm52.444-22.216c2.697-2.665 2.764-7.205.072-9.902-2.692-2.696-7.162-2.763-9.886-.071-2.697
+                        2.665-2.764 7.205-.071 9.902 2.692 2.696 7.162 2.762 9.885.071z" fill="#fff" data-color="1">
+                            </path>
+                        </g>
+                    </svg>
+                    <span class="logo-label">LAST CHANCE</span>
+                    <!-- <img src="logo.png"> -->
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit voluptate modi nam doloribus cum.
+                        Aliquid pariatur nisi reiciendis facere veniam architecto ad sint perspiciatis vitae ipsa, odit
+                        repudiandae, ut provident.</p>
+                </div>
+                <div class="col-md-4 footer-box">
+                    <p><b>CONTACT US</b></p>
+                    <P><i class="fa fa-map-marker"></i> Somewhere here, Earth</P>
+                    <P><i class="fa fa-phone"></i> +919876543210</P>
+                    <P><i class="fa fa-envelope"></i> xyz@gmail.com</P>
+                </div>
+                <div class="col-md-4 footer-box">
+                    <p><b>SUBSCRIBE NEWSLETTER</b></p>
+                    <input type="email" class="form-control" placeholder="Your Email">
+                    <button type="button" class="btn btn-primary">Subscribe</button>
+                </div>
+            </div>
+            <hr>
+            <p class="copyright">Website Crafted by <a href="https://mythmakers.github.io/Portfolio/" target="_blank"
+                    class="my-name">Prasuk Jain</a></p>
         </div>
     </section>
 
