commit after getInvolved page

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </section>
     <br><br>
     <div class="container">
-        <a href="#" style="text-decoration: none; color: #fff;">
+        <a href="./getInvolved.html" style="text-decoration: none; color: #fff;">
             <button class="getInvolve">
                 <strong>GET INVOLVED</strong>
             </button>
@@ -273,8 +273,8 @@
                 <div class="col-md-4 footer-box">
                     <p><b>CONTACT US</b></p>
                     <P><i class="fa fa-map-marker"></i> Somewhere here, Earth</P>
-                    <P><i class="fa fa-phone"></i> +919876543210</P>
-                    <P><i class="fa fa-envelope"></i> xyz@gmail.com</P>
+                    <P><i class="fa fa-phone"></i><a class="href" href="tel:+919876543210"> +919876543210</a></P>
+                    <P><i class="fa fa-envelope"></i><a class="href"> xyz@gmail.com</a></P>
                 </div>
                 <div class="col-md-4 footer-box">
                     <p><b>SUBSCRIBE NEWSLETTER</b></p>
